Updated log4j2 and added latest perf_test